--- a/production/ob_dial_list.html
+++ b/production/ob_dial_list.html
@@ -67,7 +67,7 @@
                 <h3>Modules</h3>
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-phone"></i> OutBound <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu" id="menu_outbound"></ul> 
+                    <ul class="nav child_menu" id="menu_outbound"></ul>
                   </li>
                 </ul>
               </div>
@@ -181,35 +181,35 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">UUID</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dlma_detail_uuid">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dl_detail_uuid">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Name</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dlma_detail_name">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_name">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Description</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dlma_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_description">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Status</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dlma_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_status">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial list master uuid</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dlma_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dlma_uuid">
                       </div>
                     </div>
 
@@ -217,7 +217,7 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">E-mail</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dlma_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_email">
                       </div>
                     </div>
 
@@ -281,6 +281,119 @@
 
 
 
+
+                    <!-- <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing campaign uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_camp_uuid">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing plan uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_plan_uuid">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_uuid">
+                      </div>
+                    </div> -->
+
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Reserv target</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_resv_target">
+                      </div>
+                    </div>
+
+
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">UKey</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_ukey">
+                      </div>
+                    </div>
+
+
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Variables</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_variables">
+                      </div>
+                    </div>
+
+
+
+                  </form>
+                </div>
+
+                <div class="col-xs-6">
+                  <form class="form-horizontal form-label-left">
+
+
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing campaign uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_camp_uuid">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing plan uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_plan_uuid">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing uuid</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_uuid">
+                      </div>
+                    </div>
+
+
+
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Result dial</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_res_dial">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Result dial detail</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_res_dial_detail">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Result hangup</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_res_hangup">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Result hangup detail</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_res_hangup_detail">
+                      </div>
+                    </div>
+
+
+
+
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Try count 1</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
@@ -339,65 +452,47 @@
 
 
 
-                  </form>
-                </div>
-
-                <div class="col-xs-6">
-                  <!-- <p class="lead" align="center">Other info</p> -->
-
-                  <form class="form-horizontal form-label-left">
-
-
-
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing campaign uuid</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Time last dial</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_campaign_uuid">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_tm_last_dial">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing plan uuid</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Time last hangup</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_campaign_uuid">
+                        <input type="text" class="form-control" placeholder="" id="dl_detail_tm_last_hangup">
                       </div>
                     </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dialing campaign uuid</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="dl_detail_dialing_campaign_uuid">
-                      </div>
-                    </div>
-
 
 
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">In use</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dlma_detail_in_use">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dl_detail_in_use">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time create</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dlma_detail_tm_create">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dl_detail_tm_create">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time update</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dlma_detail_tm_update">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dl_detail_tm_update">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time delete</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dlma_detail_tm_delete">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="dl_detail_tm_delete">
                       </div>
                     </div>
 
@@ -408,9 +503,9 @@
               </div> <!-- <div class="x_content"> -->
 
               <div align="right">
-                <button type="button" id="campaign_detail_button_create" onclick="bt_create_dl_detail()" class="btn btn-primary btn-lg">Create</button>
-                <button type="button" id="campaign_detail_button_update" onclick="bt_update_dl_detail()" class="btn btn-success btn-lg">Update</button>
-                <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_dl_detail()" class="btn btn-danger btn-lg">Delete</button>
+                <button type="button" id="dl_detail_button_create" onclick="bt_create_dl_detail()" class="btn btn-primary btn-lg">Create</button>
+                <button type="button" id="dl_detail_button_update" onclick="bt_update_dl_detail()" class="btn btn-success btn-lg">Update</button>
+                <button type="button" id="dl_detail_button_delete" onclick="bt_delete_dl_detail()" class="btn btn-danger btn-lg">Delete</button>
               </div>
 
             </div>
