--- a/production/ob_dial_list.html
+++ b/production/ob_dial_list.html
@@ -585,7 +585,8 @@
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
 
-    <!-- -->
+    <!-- common -->
+    <script src="./js/common/data_handler.js"></script>
     <script src="./js/menu/side_bar.js"></script>
 
     <!-- -->
