--- a/production/index0.html
+++ b/production/index0.html
@@ -1,10 +1,9 @@
 
-<!-- show all list of campaigns -->
 <div class="row">
   <div class="col-md-12">
     <div class="x_panel">
       <div class="x_title">
-        <h2>Typography <small>different design elements</small></h2>
+        <h2>Jade-manager<small>Jade administrator.</small></h2>
         <ul class="nav navbar-right panel_toolbox">
           <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
           </li>
@@ -28,40 +27,17 @@
         <div class="col-md-8 col-lg-8 col-sm-7">
           <!-- blockquote -->
           <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer>Someone famous in <cite title="Source Title">Source Title</cite>
-            </footer>
+            <p>Simple management tool for the Jade.</p>
           </blockquote>
 
-          <blockquote class="blockquote-reverse">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              posuere erat a ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer>Someone famous in <cite title="Source Title">Source Title</cite>
-            </footer>
-          </blockquote>
         </div>
         <div class="col-md-4 col-lg-4 col-sm-5">
-          <h1>h1. Bootstrap heading</h1>
-          <h2>h2. Bootstrap heading</h2>
-          <h3>h3. Bootstrap heading</h3>
-          <h4>h4. Bootstrap heading</h4>
-          <h5>h5. Bootstrap heading</h5>
-          <h6>h6. Bootstrap heading</h6>
+          <h5><a href="https://github.com/pchero/jade-manager">https://github.com/pchero/jade-manager</a></h5>
+          <h5>pchero21 at gmail dot com</h5>
         </div>
 
         <div class="clearfix"></div>
 
-        <div class="col-md-12">
-          <h4>Labels and badges</h4>
-          <span class="label label-default">Default</span>
-          <span class="label label-primary">Primary</span>
-          <span class="label label-success">Success</span>
-          <span class="label label-info">Info</span>
-          <span class="label label-warning">Warning</span>
-          <span class="label label-danger">Danger</span>
-          <span class="badge bg-green">42</span>
-        </div>
       </div>
     </div>
   </div>
